# habits

./: .dockerignore  .gitignore  Dockerfile  Rocket.toml  docker-compose.yml  gen-env.sh
.github/workflows/: build-docker.yml
client/: package.json
client/public/: index.html
client/src/: App.tsx  Error.tsx  HabitDetail.tsx  HabitShort.tsx  Habits.tsx  HabitsAnimation.module.css  Login.tsx  api.ts  date.ts  goal.tsx  store.ts  types.ts
server/: Cargo.toml  build.rs  schema.sql
server/src/: common.rs  db.rs  main.rs  user.rs
